@startuml
class Universidade {
    -curriculos: List<Curriculo>
}

class Curriculo {
    -cursos: List<Curso>
}

class Curso {
    -nome: String
    -creditos: Credito
    -cargaHoraria: int
    -disciplinas: List<Disciplina>
}

class Disciplina {
    -nome: String
    -numeroMinimoAlunos: int
    -numeroMaximoAlunos: int
    -cargaHoraria: int
    -creditos: Credito
    -status: String
    -professorResponsavel: Professor
    -alunosInscritos: List<Aluno>
    -preRequisitos: List<Disciplina>
    -coRequisitos: List<Disciplina>
}

interface Credito {
    -quantidadeCreditos: int
}

class Turma {
    -ano: int
    -semestre: int
    -disciplina: Disciplina
    -professor: Professor
    -alunosInscritos: List<Aluno>
}

interface Usuario {
    -nome: String
    -senha: String
}

class Aluno {
    -curso: Curso
    -matriculas: List<Matrícula>
}

class Professor {
    -disciplinas: List<Disciplina>
    +visualizarMatriculas(disciplina: Disciplina): List<Aluno>
}

class Secretaria {
    -nome: String
    +geriCurriculoSemestral(curriculo: Curriculo)
    +notificarCobranca(aluno: Aluno, semestre: String)
}

class Matrícula {
    -dataMatricula: Date
    -disciplina: Disciplina
    -aluno: Aluno
}

Universidade "1" -- "1" Curriculo
Secretaria "1" -- "0..*" Curriculo
Curriculo "1" -- "0..*" Curso
Curso "1" -- "0..*" Disciplina
Disciplina "1" -- "0..*" Matrícula
Aluno "1" -- "0..*" Matrícula
Professor "0..*" -- "0..*" Disciplina
Disciplina "1" -- "1" Turma
Curso *-- Credito
Disciplina *-- Credito
Usuario <|-- Aluno
Usuario <|-- Professor

@enduml
